--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
       block head
-        title="Express Starter App"
+        title="Medium Clone"
         link(rel='stylesheet' href='/stylesheets/reset.css')
   body
     block content
