--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,6 +2,7 @@ extends layout
 block content 
   title= title
   h1= title
+  div(class='signupForm')
     form(method="post" action="/users/new")
       input(type="hidden" name="_csrf" value=csrfToken)
       label(for="firstName") Enter A Firstname
