--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,6 +6,7 @@ block content
       ul
         for error in errors
           li=error
+  div(class="signup")
     form(method="post" action="/users/new")
       input(type="hidden" name="_csrf" value=csrfToken)
       label(for="firstName") Enter A Firstname 
