--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,10 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
-  h1= title
-  p Welcome to your Project Skeleton
+  div(class="hero")
+    if session.auth
+      h2 Welcome #{session.auth.userName}
+    if !session.auth
+      h1 Where good ideas find you
+      p Read and share new perspectives on just about any topic. Everyone’s welcome.
+      a(href='/users/new' class="heroButton") Get Started
