--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ extends layout
 append head
   //- add page specific styles by appending to the head
   link(rel="stylesheet" href="/stylesheets/index.css")
+  link(rel="stylesheet" href="/stylesheets/trending.css")
   //- add page specific js
   script(src="/javascripts/index.js" type="module" defer)
 
@@ -12,7 +13,13 @@ block content
     h1 Where good ideas find you
     p Read and share new perspectives on just about any topic. Everyone’s welcome.
     a(href='/users/new' class="heroButton") Get Started
-  div
-    ul
-      each article in articles
-        li=article.title
+  div(class="trending container") 
+    h2(class="trending-title") <i class="far fa-arrow-alt-circle-down"></i> TRENDING ON POEDIUM
+      div(class="articles-div")
+        each article in articles
+          div(class="trending-article")
+            p(class="number") 0#{article.id}
+            div(class="trending-article-box")
+              a(href=`/users/${article.User.id}` class="trending-article-name") #{article.User.firstName} #{article.User.lastName}
+              a(href=`/articles/${article.id}` class="trending-article-title")=article.title
+              p(class="trending-article-date") Dec 1 * #{article.id} min read
