--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -86,10 +86,9 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-
   }
 
-  .modalInput {
+  .modalInput,.modalTextArea {
       padding: 10px;
       margin-top: 10px;
       margin-bottom: 10px;
@@ -99,6 +98,11 @@
       border-left: none;
       border-right: none;
       border-bottom: black 1px solid;
+  }
+
+  .modalTextArea {
+    height: 200px;
+    border-bottom: none;
   }
 
   .modalSubmit {
