--- a/views/articles.pug
+++ b/views/articles.pug
@@ -1,15 +1,10 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Submit Your Article
-    body
-        form(method='post' action='/articles/new')
-            input(type='hidden' name='_csrf' value=token)
-            input(type='hidden' name='userId' value=session.auth.userId)
-            input(name='title' type='text' placeholder='Enter Title')
-            div
-            textarea(name='body' placeholder='Enter Poem')
-            div
-                button(type='submit' value='submit') Submit
+extends layout
+block content
+    form(method='post' action='/articles/new')
+        input(type='hidden' name='_csrf' value=token)
+        input(type='hidden' name='userId' value=session.auth.userId)
+        input(name='title' type='text' placeholder='Enter Title')
+        div
+        textarea(name='body' placeholder='Enter Poem')
+        div
+            button(type='submit' value='submit') Submit
