--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,6 +32,7 @@ html
                 <i class="fas fa-user user-icon"></i>
                 div(class="dropdown-content") 
                   a(href="/users/logout" id="logout" ) Logout 
+                  a(href="/articles/new" id="newPoem" ) Write a poem
                   
             
     block content
