some article styling

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
         title="Medium Clone"
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel="stylesheet", href="/stylesheets/navbar.css")
+        link(rel="stylesheet", href="/stylesheets/articles.css")
         <script src="https://kit.fontawesome.com/1f57d4952c.js" crossorigin="anonymous"></script>
 
   body
