--- a/views/article-edit.pug
+++ b/views/article-edit.pug
@@ -1,10 +1,11 @@
 extends layout
 block content
-    form(method='post' action=`/articles/${article.id}/edit`)
-        input(type='hidden' name='_csrf' value=token)
-        input(type='hidden' name='userId' value=session.auth.userId)
-        input(name='title' type='text' value= article.title)
-        div
-        textarea(name='body') #{article.body}
-        div
-            button(type='submit' value='submit') Submit
+    div(class="new-articles-container")
+        form(method='post' action=`/articles/${article.id}/edit`)
+            input(type='hidden' name='_csrf' value=token)
+            input(type='hidden' name='userId' value=session.auth.userId)
+            input(name='title' type='text' class="new-article-title" value= article.title)
+            div
+            textarea(name='body' class="new-article-body") #{article.body}
+            div
+                button(type='submit' class="black-outline" value='submit') Submit
