--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -2,6 +2,7 @@ extends layout
 block content
   div(class="new-articles-container")
     h1= article.title
-    p= article.body
+    p #{article.body}
+    p(class="like") <i class="far fa-hand-point-up"></i>
     if (session.auth.userId == article.userId)
       a(href=`/articles/${article.id}/edit` class="heroButton editArticle") Edit Poem
