--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
         link(rel="stylesheet", href="/stylesheets/navbar.css")
         link(rel="stylesheet", href="/stylesheets/articles.css")
         <script src="https://kit.fontawesome.com/1f57d4952c.js" crossorigin="anonymous"></script>
+        
 
   body
     if !session.auth
@@ -34,6 +35,6 @@ html
                 div(class="dropdown-content") 
                   a(href="/users/logout" id="logout" ) Logout 
                   a(href="/articles/new" id="newPoem" ) Write a poem
-                  
+    script(src="/javascripts/index.js")
             
     block content
