--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -3,12 +3,12 @@ block content
   div(class="new-articles-container singleArticle" id=article.id)
     h1(class='article-title' id=session.auth.userId)= article.title
     p= article.body
-      each comment in comments
-        p=comment.body
     if (session.auth.userId)
       p(class="like") <i class="far fa-hand-point-up"></i>
       p <i class="far fa-comment-dots comment-button"></i>
-    div(class='newcomment')  
+      div(class='newcomment hidden')  
     div(class='comments')
+      each comment in comments
+        p=comment.body
     if (session.auth.userId == article.userId)
       a(href=`/articles/${article.id}/edit` class="heroButton editArticle") Edit Poem
