--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,8 @@ html
         link(rel="stylesheet", href="/stylesheets/navbar.css")
         link(rel="stylesheet", href="/stylesheets/articles.css")
         <script src="https://kit.fontawesome.com/1f57d4952c.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js"></script>
+
         
 
   body
