--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -6,7 +6,7 @@ block content
       each comment in comments
         p=comment.body
     if (session.auth.userId)
-      p(class="like") <i class="far fa-hand-point-up"></i>
+      p <i class="far fa-hand-point-up like"></i> #{likeCount}
       p <i class="far fa-comment-dots comment-button"></i>
     div(class='newcomment')  
     div(class='comments')
