small changes before deploy

--- a/public/stylesheets/articles.css
+++ b/public/stylesheets/articles.css
@@ -53,15 +53,20 @@
     margin-top: 20px;
 }
 
+.article-title {
+    text-align: center;
+    font-size: 2.4rem;
+}
+
+.article-body {
+    
+}
+
 .newcomment {
     display: flex;
     /* flex-direction: column; */
     /* width: 350px; */
     justify-content: space-evenly;
-}
-
-.newcomment>button {
-    /* marg */
 }
 
 .comment-button {
