Display Likes on article page when page loaded

--- a/public/stylesheets/articles.css
+++ b/public/stylesheets/articles.css
@@ -66,12 +66,19 @@
     /* marg */
 }
 
+.like-comment {
+    display: flex;
+}
+
 .comment-button {
     font-size: 2rem;
+    cursor: pointer;
+    margin-left: 30px;
 }
 
 .like {
     cursor: pointer;
+    font-size: 2rem;
 }
 
 .hidden {
