--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -6,6 +6,7 @@ block content
     if (session.auth.userId)
       div(class='like-comment')
         p <i class="far fa-thumbs-up like"></i> #{likeCount}
+        p <i class="fas fa-hand-point-down unlike"></i>
         p <i class="far fa-comment-dots comment-button"></i>
         div(class='newcomment hidden')  
     div(class='comments')
