--- a/views/article-single.pug
+++ b/views/article-single.pug
@@ -1,8 +1,11 @@
 extends layout
 block content
   div(class="new-articles-container singleArticle" id=article.id)
-    h1(class='article-title' id=session.auth.userId)= article.title
-    p= article.body
+    h1(class='article-title-single' id=session.auth.userId)= article.title
+    p
+      a(class='article-author-single' href=`/users/${article.User.id}`) #{article.User.firstName} #{article.User.lastName}
+      span(class='article-author-single-date')='' + moment(article.createdAt).format("DD/MM/YYYY") + ''
+    p(class='article-body-single')= article.body
     if (session.auth.userId)
       div(class='like-comment')
         p(class="like") <i class="far fa-thumbs-up like"></i> 
