--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
       div(class="modal-content")
         p
           a(href="/" class="modalClose") X 
-        p(class="modalTitle") Sign in to Medium 
+        p(class="modalTitle") Welcome back. 
         if errors
           ul
             for error in errors
