--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
       block head
-        title="Medium Clone"
+        title="Poedium"
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel="stylesheet", href="/stylesheets/navbar.css")
         link(rel="stylesheet", href="/stylesheets/articles.css")
