--- a/views/signup.pug
+++ b/views/signup.pug
@@ -7,7 +7,7 @@ block content
       div(class="modal-content")
         span
           a(href="/" class="modalClose") X
-        p(class="modalTitle") Join Poedium
+        p(class="modalTitle") Join Poedium.
         if errors
           ul
             for error in errors
