--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -52,6 +52,12 @@
     margin-left: 40px;
     font-weight: bold;
     margin-top: -5px;
+    cursor: pointer;
+    color: white;
+}
+
+.logo-black {
+    color: black;
 }
 
 .modal {
