--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
   body
     if !session.auth
       div(class="navbar yellow")
-        div(class="logo") <i class="fas fa-crow"></i> Poedium
+        div(class="logo logo-black") <i class="fas fa-crow"></i> Poedium
         div(class="navlinks")
           ul
             li(class="lg-only") Our Story
