Add logo colors

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -54,6 +54,11 @@ div {
     font-weight: bold;
     margin-top: -5px;
     cursor: pointer;
+    color: white;
+}
+
+.logo-black {
+    color: black;
 }
 
 .modal {
