--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,12 +9,10 @@ html
         <script src="https://kit.fontawesome.com/1f57d4952c.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js"></script>
 
-        
-
   body
     if !session.auth
       div(class="navbar yellow")
-        div(class="logo") <i class="fas fa-crow"></i> Poedium
+        div(class="logo logo-black") <i class="fas fa-crow"></i> Poedium
         div(class="navlinks")
           ul
             li(class="lg-only") Our Story
