--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -7,12 +7,12 @@
 }
 
 .navbar {
+    background-color: hsl(44deg 100% 55%);
     justify-content: space-between;
     height: 75px;
     align-items: center;
     border-bottom: solid black thin;
     padding-top: 5px;
-    background-color: black;
 }
 
 .yellow {
@@ -131,7 +131,7 @@ div {
 
 .hero {
     background-color: #ffc017;
-    height: 450px;
+    height: 400px;
     color: black;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -168,16 +168,16 @@ div {
 .greeting {
     font-size: 1.5rem;
     font-weight: bold;
-    color: white;
 }
 
 .user-icon {
     font-size: 1.5rem;
-    color: white;
+
     /* position: relative;
       left: 100px; */
     /* top: 30px */
 }
+
 .user-menu {
     margin-left: 250px;
 }
@@ -187,6 +187,7 @@ div {
     display: inline-block;
     cursor: pointer;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -197,6 +198,7 @@ div {
     z-index: 1;
     left: -100px;
 }
+
 .dropdown:hover .dropdown-content {
     display: flex;
     flex-direction: column;
@@ -205,7 +207,6 @@ div {
     margin-top: 10px;
     text-decoration: none;
 }
-
 @media (max-width: 770px) {
     .lg-only {
         display: none;
